c4prj2_input/grade.txt
Grading at Fri Aug  2 22:39:04 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:14:19: error: incompatible types when assigning to type ‘deck_t {aka struct deck_tag}’ from type ‘void *’
  fc->decks[index] = malloc(sizeof(deck_t));
                   ^
future.c:15:23: error: incompatible type for argument 1 of ‘add_empty_card’
  ptr = add_empty_card(fc[index]);
                       ^
In file included from future.h:3:0,
                 from future.c:3:
deck.h:18:10: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘future_cards_t {aka struct future_cards_tag}’
 card_t * add_empty_card(deck_t * deck);
          ^
future.c: In function ‘future_cards_from_deck’:
future.c:26:16: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
    fc->decks[i]->cards[j]->value = deck->cards[i]->value;
                ^
future.c:27:16: error: invalid type argument of ‘->’ (have ‘deck_t {aka struct deck_tag}’)
    fc->decks[i]->cards[j]->suit = deck->cards[i]->suit;
                ^
future.c: At top level:
future.c:32:1: error: unterminated comment
 /*
 ^
Compilation of future.c failed

Overall Grade: F
